# malicious-url-checker

./: .gitignore  README.md  generate_normal_urls.py  main.py  predict_urls.py  pyproject.toml  requirements.txt  test_small.py  train_gpu.py
data_bak/: normal_urls.csv
